加入區塊加載范圍和加卸載功能，實現無縫的循環世界